# itertools-cli

./: README.md  pyproject.toml
itertools_cli/: __main__.py
